Finish query/insert/update/delete phone item. Add adapter to create custom ListView.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
         </activity>
         <activity android:name=".AddPhoneItemActivity">
         </activity>
+        <activity android:name=".EditPhoneItemActivity">
+        </activity>
     </application>
 
 </manifest>
